kubernetes/apps/slskd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: slskd
  namespace: slskd
  labels:
    app: slskd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: slskd
  template:
    metadata:
      labels:
        app: slskd
    spec:
      containers:
        - name: slskd
          image: ghcr.io/hotio/slskd:release-0.24.4
          ports:
            - containerPort: 5030
              protocol: TCP
              name: http
            - containerPort: 50300
              protocol: TCP
              name: soulseek
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 1000m
              memory: 512Mi
          volumeMounts:
            - mountPath: /config
              name: config
            - mountPath: /data
              name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: slskd-config
        - name: data
          persistentVolumeClaim:
            claimName: pvc-slskd-synology
        - name: config-yml
          configMap:
            name: slskd-config
