kubernetes/apps/slskd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: slskd
  namespace: slskd
  labels:
    app: slskd
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.202.160
  ports:
    - port: 5030
      targetPort: 5030
      protocol: TCP
      name: http
    - port: 50300
      targetPort: 50300
      protocol: TCP
      name: soulseek
  selector:
    app: slskd
