kubernetes/apps/slskd/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: slskd
  namespace: slskd
  annotations:
    external-dns.kubernetes.io/target: <path:cloudflared:tunnel-config#tunnel-target>
    external-dns.kubernetes.io/cloudflare-proxied: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`slskd.<path:cert-manager:domain-config#domain>`)
      kind: Rule
      services:
        - name: slskd
          port: 5030
  tls: {}
